--- a/javascript-essence-tutorial-master/090_モジュラーJavaScript/040_モジュールの特徴/start/index.html
+++ b/javascript-essence-tutorial-master/090_モジュラーJavaScript/040_モジュールの特徴/start/index.html
@@ -27,8 +27,12 @@
             コースへ
         </a>
     </div>
+    <script nomodule>alert('nomodule')</script>
+    <script src="main.js" defer></script>
     <script src="main.js" defer></script>
     <script type="module" src="moduleB.js"></script>
+    <script type="module" src="moduleB.js"></script>
+    <h1>Module Lecture</h1>
 </body>
 
 </html>
