--- a/javascript-essence-tutorial-master/110_Vue/050_Reactivity（Track編 Part.2）/start/index.html
+++ b/javascript-essence-tutorial-master/110_Vue/050_Reactivity（Track編 Part.2）/start/index.html
@@ -1,7 +1,8 @@
 <script type="module">
     import { reactive, effect } from './reactive.js';
     const obj1 = reactive({
-        a: 0
+        a: 0,
+        b: 1
     });
     const obj2 = reactive({
         a: 0
@@ -10,11 +11,14 @@
     effect(() => {
         console.log('effect 1', obj1.a);
     });
-    
+
+    effect(() => {
+        console.log('effect 3', obj1.b);
+    });
+
     effect(() => {
         console.log('effect 2', obj2.a);
     });
-
     obj1.a = 1;
     obj2.a = 2;
 </script>
