--- a/javascript-essence-tutorial-master/110_Vue/080_Computed（基礎編）/start/index.html
+++ b/javascript-essence-tutorial-master/110_Vue/080_Computed（基礎編）/start/index.html
@@ -1,12 +1,13 @@
 <script type="module">
-    import { reactive, effect } from './reactive.js';
+    import { reactive, effect, computed } from './reactive.js';
     const obj1 = reactive({
         a: 0
     });
 
-    effect(() => {
-        console.log('effect 1', obj1.a);
+    const computedValue = computed(() => {
+        return obj.a + 10;
     });
 
     obj1.a = 1;
+    console.log(computedValue);
 </script>
